--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,10 @@
 <import src="../../components/trip/trip.wxml"/>
-<view class="user">
+
+<scroll-view class="list" style="height: {{ windowHeight }}px; width: {{ windowWidth }}px;" scroll-y="true"  bindscrolltolower="loadMore" lower-threshold="800">
   <block wx:for="{{ trips }}" wx:for-item="trip">
-    <template is="m-trip" data="{{trip: trip}}"/>
+    <template is="m-trip" data="{{trip: trip.data[0]}}" />
   </block>
-</view>
+  <view class="loading">
+    <image class="loading-gif" src="../../images/loading.gif"></image>
+  </view>
+</scroll-view>
