--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,8 +2,21 @@
 
 page{
   background-color: #fbf7ed;
-  padding: 10px;
+}
+.list{
+}
+.m-trip{
+  margin: 10px;
 }
 .trip-title{
   margin-bottom: 5px;
+}
+.loading{
+  text-align: center;
+  margin: 10px 0;
+}
+.loading-gif{
+  width: 110px;
+  height: 21px;
+  vertical-align: bottom;
 }
