--- a/components/trip/trip.wxss
+++ b/components/trip/trip.wxss
@@ -1,12 +1,12 @@
 .m-trip{
   overflow: hidden;
   position: relative;
-  border-radius: 4px;
-  margin-bottom: 10px;
+  border-radius: 8rpx;
+  margin-bottom: 20rpx;
 }
 .m-trip .cover{
   width: 100%;
-  height: 200px;
+  height: 352rpx;
   vertical-align: bottom;
 }
 .m-trip::before{
@@ -15,15 +15,15 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 280px;
+  width: 560rpx;
   height: 100%;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-top-left-radius: 8rpx;
+  border-bottom-left-radius: 8rpx;
   background: linear-gradient(to right,rgba(0,0,0,.6) 0,rgba(0,0,0,0) 100%);
 }
 .m-trip .info{
   color: #fff;
-  padding: 0 15px;
+  padding: 0 30rpx;
   position: absolute;
   top:0;
   left: 0;
@@ -33,25 +33,59 @@
   box-sizing: border-box;
 }
 .m-trip .info .h2{
-  font-size: 18px;
+  font-size: 36rpx;
   font-weight: 600;
   line-height: 1.22;
-  text-shadow: 1px 1px rgba(0,0,0,.4);
+  text-shadow: 2rpx 2rpx rgba(0,0,0,.4);
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  margin-top: 15px;
+  margin-top: 30rpx;
 }
-.m-trip .info .h3{
-  margin-top: 6px;
-  line-height: 1.33;
-  font-size: 0.9rem;
+.m-trip .detail{
+  margin-top: 10rpx;
+  padding-left: 18rpx;
+  position: relative;
+  font-size: 18rpx;
+  line-height: 1;
+  font-weight: bold;
+  text-shadow: 2rpx 4rpx 0px rgba(0,0,0,0.20);
 }
-.m-trip .info p{
+.m-trip .detail view{
+  margin-bottom: 6rpx;
+}
+.m-trip .detail text{
+  margin-right: 20rpx;
+}
+.m-trip .detail .place{
+  font-weight: normal;
+  font-size: 16rpx;
+}
+.m-trip .detail::before{
+  content: '';
+  width: 6rpx;
+  height: 38rpx;
+  border-right: 1rpx;
+  background-color: #4ABDCC;
   position: absolute;
-  bottom: 12px;
-  left: 15px;
-  font-size: 1rem;
+  left: 4rpx;
+  top: 2rpx;
+}
+.m-trip .user{
+  position: absolute;
+  width: 100%;
+  left: 30rpx;
+  bottom: 30rpx;
+  line-height: 50rpx;
+  font-size: 18rpx;
+}
+.m-trip .avatar{
+  width: 50rpx;
+  height: 50rpx;
+  float: left;
+  margin-right: 15rpx;
+  border-radius: 50rpx;
+  vertical-align: bottom;
 }
