--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,6 +5,6 @@
     <template is="m-trip" wx:if="{{ trip.type === 4 }}" data="{{trip: trip.data[0], mode: 1}}" />
   </block>
   <view class="loading">
-    <image class="loading-gif" src="../../images/loading.gif"></image>
+    正在加载...
   </view>
 </scroll-view>
