--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <import src="../../components/trip/trip.wxml"/>
 
 <scroll-view class="list" style="height: {{ windowHeight }}px; width: {{ windowWidth }}px;" scroll-y="true"  bindscrolltolower="loadMore" lower-threshold="800">
-  <block wx:for="{{ trips }}" wx:for-item="trip">
+  <block wx:for="{{ trips }}" wx:for-item="trip" wx:key="trip.data[0].id">
     <template is="m-trip" wx:if="{{ trip.type === 4 }}" data="{{trip: trip.data[0], mode: 1}}" />
   </block>
   <view class="loading">
