--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -20,7 +20,7 @@
 </view>
 <view class="trips">
   <view class="trip-title">游记<view class="count">{{ trips.length }}</view></view>
-  <block wx:for="{{ trips }}" wx:for-item="trip">
+  <block wx:for="{{ trips }}" wx:for-item="trip" wx:key="trip.id">
     <template is="m-trip" data="{{trip: trip, mode: 2}}"/>
   </block>
 </view>
