--- a/pages/explore/explore.wxml
+++ b/pages/explore/explore.wxml
@@ -1,8 +1,8 @@
 <view class="destination">
-  <block wx:for="{{ elements }}" wx:for-item="e">
+  <block wx:for="{{ elements }}" wx:for-item="e" wx:key="e.index">
     <view class="title">{{ e.title }}</view>
     <view class="list">
-      <view class="poi" data-type="{{ poi.type }}" data-id="{{ poi.id }}" data-name="{{ poi.name }}" bindtap="viewPOI" wx:for="{{ e.data }}" wx:for-item="poi">
+      <view class="poi" data-type="{{ poi.type }}" data-id="{{ poi.id }}" data-name="{{ poi.name }}" bindtap="viewPOI" wx:for="{{ e.data }}" wx:for-item="poi" wx:key="poi.id">
         <image src="{{ poi.cover_s }}"></image>
         <view class="mask"></view>
         <view class="name">{{ poi.name }}</view>
