--- a/components/widget/rating.wxml
+++ b/components/widget/rating.wxml
@@ -1,9 +1,14 @@
 <template name="m-rating">
   <view class="m-rating">
-    <block wx:for="{{ [1, 2, 3, 4, 5] }}" wx:for-item="index" wx:key="index">
+    <block wx:if="{{ size === 's' }}" wx:for="{{ [1, 2, 3, 4, 5] }}" wx:for-item="index" wx:key="index">
       <image wx:if="{{ index <= count }}" src="../../images/destination/star_s.png"></image>
       <image wx:if="{{ index > count && index - 1 < count }}" src="../../images/destination/semistar_s.png"></image>
       <image wx:if="{{ index > count && !(index - 1 < count) }}" src="../../images/destination/unstar_s.png"></image>
+    </block>
+    <block wx:if="{{ size === 'm' }}" wx:for="{{ [1, 2, 3, 4, 5] }}" wx:for-item="index" wx:key="index">
+      <image wx:if="{{ index <= count }}" src="../../images/destination/star.png"></image>
+      <image wx:if="{{ index > count && index - 1 < count }}" src="../../images/destination/semistar.png"></image>
+      <image wx:if="{{ index > count && !(index - 1 < count) }}" src="../../images/destination/unstar.png"></image>
     </block>
   </view>
 </template>
