add poi component

--- a/pages/poi/poi.wxml
+++ b/pages/poi/poi.wxml
@@ -1,4 +1,4 @@
-<import src="../../components/widget/rating.wxml"/>
+<import src="../../components/poi/poi.wxml"/>
 
 <scroll-view scroll-x="true"  class="header">
   <view class="nav">
@@ -8,5 +8,13 @@
     <view class="{{ poiType === 'restaurant' ? 'selected' : ''}}" data-type="restaurant" bindtap="changePOIType">餐厅</view>
     <view class="{{ poiType === 'entertainment' ? 'selected' : ''}}" data-type="entertainment" bindtap="changePOIType">休闲娱乐</view>
     <view class="{{ poiType === 'mall' ? 'selected' : ''}}" data-type="mall" bindtap="changePOIType">购物</view>
+  </view>
+</scroll-view>
+<scroll-view class="list" style="height: {{ windowHeight }}px; width: {{ windowWidth }}px;" scroll-y="true"  bindscrolltolower="loadMore" lower-threshold="800">
+  <block wx:for="{{ pois }}" wx:for-item="poi" wx:key="poi.id">
+    <template is="m-poi" data="{{poi: poi}}" />
+  </block>
+  <view wx:if="{{ hasMore }}" class="loading">
+    正在加载...
   </view>
 </scroll-view>
