add trip component mode 3

--- a/components/trip/trip.wxml
+++ b/components/trip/trip.wxml
@@ -1,5 +1,5 @@
 <template name="m-trip">
-  <view class="m-trip" bindtap="viewTrip" data-id="{{ trip.id }}" data-name="{{ trip.name }}">              
+  <view class="m-trip" bindtap="viewTrip" data-id="{{ trip.id }}" data-name="{{ trip.name }}" wx:if="{{ mode === 1 || mode === 2 }}">              
     <image class="cover" src="{{ trip.cover_image_w640 }}" mode="aspectFill"></image>
     <view class="info">
       <text class="h2">{{ trip.name }}</text>
@@ -13,5 +13,14 @@
       </view>
       <view class="bottom" wx:if="{{ mode === 2 }}">{{ trip.view_count }}次浏览 / {{ trip.liked_count }}喜欢 / {{ trip.total_comments_count }}评论</view>
     </view>
+  </view>
+  <view class="m-trip-s" bindtap="viewTrip" data-id="{{ trip.id }}" data-name="{{ trip.name }}"  wx:if="{{ mode === 3 }}">
+    <view class="mask"></view>
+    <image class="cover" src="{{ trip.cover_image_w640 }}" mode="aspectFill"></image>
+    <view class="info">
+      <view class="title">{{ trip.name }}</view>
+      <view class="detail"><view><text>{{ trip.date_added }}</text></view><view><text>{{ trip.day_count }}天</text></view></view>
+    </view>
+    <view class="stat"><view><text>{{ trip.waypoints }}</text>足迹</view><view><text>{{ trip.recommendations }}</text>收藏</view></view>
   </view>
 </template>
