bugfix: poi list page scroll-view’s height

--- a/pages/poi_list/poi_list.wxml
+++ b/pages/poi_list/poi_list.wxml
@@ -1,6 +1,6 @@
 <import src="../../components/poi/poi.wxml"/>
 
-<scroll-view scroll-x="true"  class="header">
+<scroll-view scroll-x="true" class="header">
   <view class="nav">
     <view class="{{ poiType === 'all' ? 'selected' : ''}}" data-type="all" bindtap="changePOIType">全部</view>
     <view class="{{ poiType === 'sights' ? 'selected' : ''}}" data-type="sights" bindtap="changePOIType">景点</view>
@@ -10,7 +10,7 @@
     <view class="{{ poiType === 'mall' ? 'selected' : ''}}" data-type="mall" bindtap="changePOIType">购物</view>
   </view>
 </scroll-view>
-<scroll-view class="list" style="height: {{ windowHeight }}px; width: {{ windowWidth }}px;" scroll-y="true"  bindscrolltolower="loadMore" lower-threshold="800">
+<scroll-view class="list" style="height: {{ windowHeight - 70 / pixelRatio }}px; width: {{ windowWidth }}px;" scroll-y="true"  bindscrolltolower="loadMore" lower-threshold="800">
   <block wx:for="{{ pois }}" wx:for-item="poi" wx:key="poi.id">
     <template is="m-poi" data="{{poi: poi}}" />
   </block>
